[QI2-1435] Update qi login in example notebooks (#134)

--- a/docs/notebooks/basic_circuit_execution.ipynb
+++ b/docs/notebooks/basic_circuit_execution.ipynb
@@ -23,7 +23,7 @@
     "# Be sure to have logged in to the QI platform via the SDK. If you have installed it in the same environment as\n",
     "# this notebook, you may run this cell.\n",
     "\n",
-    "!qi login \"https://staging.qi2.quantum-inspire.com\""
+    "!qi login"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "id": "9645611e-bd42-4814-9266-243676877e8d",
    "metadata": {},
    "source": [
-    "## Obtain the result \n",
+    "## Obtain the result\n",
     "After a while the result should be available. Depending on the current load, the time for completion may vary."
    ]
   },
