[QI2-1432] Update notebook instructions

--- a/docs/notebooks/basic_circuit_execution.ipynb
+++ b/docs/notebooks/basic_circuit_execution.ipynb
@@ -8,22 +8,9 @@
     "# Basic circuit execution\n",
     "This notebooks illustrates how you can run your qiskit code on the Quantum Inspire platform.\n",
     "## This notebook makes the following assumptions:\n",
-    "- QI tool installed\n",
+    "- The qi cli tool is installed and you are logged in, see [these instructions](https://github.com/QuTech-Delft/quantuminspire?tab=readme-ov-file#installation)\n",
     "- account exists on the Quantum Inspire platform\n",
     "- qiskit plugin installed (pip install qiskit-quantuminspire) in the same environment as this notebook"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93fe4f56-4ced-41fc-b778-14d6c95e2434",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Be sure to have logged in to the QI platform via the SDK. If you have installed it in the same environment as\n",
-    "# this notebook, you may run this cell.\n",
-    "\n",
-    "!qi login"
    ]
   },
   {
